--- a/model_bbox/Hybrid_rep.ipynb
+++ b/model_bbox/Hybrid_rep.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -392,7 +392,101 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      " 5248/15583 [=========>....................] - ETA: 223s - loss: 14.6910 - acc: 0.2003"
+      "15488/15583 [============================>.] - ETA: 1s - loss: 13.8474 - acc: 0.3061"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py:1470: UserWarning: Epoch comprised more than `samples_per_epoch` samples, which might affect learning results. Set `samples_per_epoch` correctly to avoid this warning.\n",
+      "  warnings.warn('Epoch comprised more than '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 00000: val_loss improved from inf to 1.50590, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.000-1.5059.hdf5\n",
+      "15616/15583 [==============================] - 298s - loss: 13.8397 - acc: 0.3072 - val_loss: 1.5059 - val_acc: 0.7757\n",
+      "Epoch 2/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 11.1143 - acc: 0.5310Epoch 00001: val_loss improved from 1.50590 to 1.20373, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.001-1.2037.hdf5\n",
+      "15616/15583 [==============================] - 226s - loss: 11.0897 - acc: 0.5314 - val_loss: 1.2037 - val_acc: 0.7757\n",
+      "Epoch 3/30\n",
+      "15550/15583 [============================>.] - ETA: 0s - loss: 9.1100 - acc: 0.6055Epoch 00002: val_loss improved from 1.20373 to 1.09151, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.002-1.0915.hdf5\n",
+      "15678/15583 [==============================] - 225s - loss: 9.0849 - acc: 0.6056 - val_loss: 1.0915 - val_acc: 0.7749\n",
+      "Epoch 4/30\n",
+      "15455/15583 [============================>.] - ETA: 1s - loss: 8.3404 - acc: 0.6611Epoch 00003: val_loss improved from 1.09151 to 1.05127, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.003-1.0513.hdf5\n",
+      "15583/15583 [==============================] - 224s - loss: 8.3196 - acc: 0.6610 - val_loss: 1.0513 - val_acc: 0.7752\n",
+      "Epoch 5/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 7.8480 - acc: 0.6730Epoch 00004: val_loss improved from 1.05127 to 1.01976, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.004-1.0198.hdf5\n",
+      "15616/15583 [==============================] - 224s - loss: 7.8457 - acc: 0.6730 - val_loss: 1.0198 - val_acc: 0.7759\n",
+      "Epoch 6/30\n",
+      "15550/15583 [============================>.] - ETA: 0s - loss: 7.2177 - acc: 0.6895Epoch 00005: val_loss improved from 1.01976 to 0.94897, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.005-0.9490.hdf5\n",
+      "15678/15583 [==============================] - 225s - loss: 7.2020 - acc: 0.6900 - val_loss: 0.9490 - val_acc: 0.7716\n",
+      "Epoch 7/30\n",
+      "15455/15583 [============================>.] - ETA: 1s - loss: 6.8154 - acc: 0.7110Epoch 00006: val_loss improved from 0.94897 to 0.84402, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.006-0.8440.hdf5\n",
+      "15583/15583 [==============================] - 224s - loss: 6.7886 - acc: 0.7106 - val_loss: 0.8440 - val_acc: 0.7621\n",
+      "Epoch 8/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 6.5778 - acc: 0.7244Epoch 00007: val_loss improved from 0.84402 to 0.67863, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.007-0.6786.hdf5\n",
+      "15616/15583 [==============================] - 224s - loss: 6.5711 - acc: 0.7243 - val_loss: 0.6786 - val_acc: 0.8047\n",
+      "Epoch 9/30\n",
+      "15550/15583 [============================>.] - ETA: 0s - loss: 6.1112 - acc: 0.7383Epoch 00008: val_loss did not improve\n",
+      "15678/15583 [==============================] - 223s - loss: 6.1075 - acc: 0.7386 - val_loss: 0.7101 - val_acc: 0.7847\n",
+      "Epoch 10/30\n",
+      "15455/15583 [============================>.] - ETA: 1s - loss: 6.0082 - acc: 0.7444Epoch 00009: val_loss did not improve\n",
+      "15583/15583 [==============================] - 223s - loss: 6.0097 - acc: 0.7441 - val_loss: 0.7623 - val_acc: 0.7675\n",
+      "Epoch 11/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 5.4356 - acc: 0.7506Epoch 00010: val_loss did not improve\n",
+      "15616/15583 [==============================] - 223s - loss: 5.4353 - acc: 0.7510 - val_loss: 0.6829 - val_acc: 0.7852\n",
+      "Epoch 12/30\n",
+      "15517/15583 [============================>.] - ETA: 0s - loss: 5.6055 - acc: 0.7533Epoch 00011: val_loss did not improve\n",
+      "15645/15583 [==============================] - 224s - loss: 5.6106 - acc: 0.7534 - val_loss: 0.6988 - val_acc: 0.7785\n",
+      "Epoch 13/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 5.4229 - acc: 0.7606Epoch 00012: val_loss improved from 0.67863 to 0.65562, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.012-0.6556.hdf5\n",
+      "15616/15583 [==============================] - 223s - loss: 5.4121 - acc: 0.7604 - val_loss: 0.6556 - val_acc: 0.7882\n",
+      "Epoch 14/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 5.0378 - acc: 0.7748Epoch 00013: val_loss did not improve\n",
+      "15616/15583 [==============================] - 223s - loss: 5.0413 - acc: 0.7750 - val_loss: 0.6923 - val_acc: 0.7726\n",
+      "Epoch 15/30\n",
+      "15517/15583 [============================>.] - ETA: 0s - loss: 5.0842 - acc: 0.7721Epoch 00014: val_loss improved from 0.65562 to 0.62955, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.014-0.6295.hdf5\n",
+      "15645/15583 [==============================] - 224s - loss: 5.1060 - acc: 0.7722 - val_loss: 0.6295 - val_acc: 0.8034\n",
+      "Epoch 16/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 5.0772 - acc: 0.7649Epoch 00015: val_loss did not improve\n",
+      "15616/15583 [==============================] - 223s - loss: 5.0836 - acc: 0.7648 - val_loss: 0.6465 - val_acc: 0.7906\n",
+      "Epoch 17/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 4.6988 - acc: 0.7837Epoch 00016: val_loss improved from 0.62955 to 0.60781, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.016-0.6078.hdf5\n",
+      "15616/15583 [==============================] - 224s - loss: 4.6981 - acc: 0.7837 - val_loss: 0.6078 - val_acc: 0.8075\n",
+      "Epoch 18/30\n",
+      "15550/15583 [============================>.] - ETA: 0s - loss: 4.8971 - acc: 0.7809Epoch 00017: val_loss did not improve\n",
+      "15678/15583 [==============================] - 224s - loss: 4.8829 - acc: 0.7810 - val_loss: 0.6301 - val_acc: 0.7931\n",
+      "Epoch 19/30\n",
+      "15455/15583 [============================>.] - ETA: 1s - loss: 4.6030 - acc: 0.7928Epoch 00018: val_loss improved from 0.60781 to 0.58206, saving model to ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.018-0.5821.hdf5\n",
+      "15583/15583 [==============================] - 225s - loss: 4.6167 - acc: 0.7929 - val_loss: 0.5821 - val_acc: 0.8149\n",
+      "Epoch 20/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 4.5534 - acc: 0.7816Epoch 00019: val_loss did not improve\n",
+      "15616/15583 [==============================] - 234s - loss: 4.5383 - acc: 0.7821 - val_loss: 0.5878 - val_acc: 0.8124\n",
+      "Epoch 21/30\n",
+      " 4096/15583 [======>.......................] - ETA: 123s - loss: 4.4467 - acc: 0.7881"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-525d34178fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m                     \u001b[0msamples_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnb_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m                     \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mearly_stopping\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_checkpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearningrate_schedule\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensorboard\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m                     validation_data=(valid_x,valid_y), class_weight=class_weight, nb_worker=3, pickle_safe=True)\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, samples_per_epoch, nb_epoch, verbose, callbacks, validation_data, nb_val_samples, class_weight, max_q_size, nb_worker, pickle_safe, initial_epoch)\u001b[0m\n\u001b[1;32m   1449\u001b[0m                     outs = self.train_on_batch(x, y,\n\u001b[1;32m   1450\u001b[0m                                                \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1451\u001b[0;31m                                                class_weight=class_weight)\n\u001b[0m\u001b[1;32m   1452\u001b[0m                 \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1453\u001b[0m                     \u001b[0m_stop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mtrain_on_batch\u001b[0;34m(self, x, y, sample_weight, class_weight)\u001b[0m\n\u001b[1;32m   1224\u001b[0m             \u001b[0mins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msample_weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1225\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_train_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1226\u001b[0;31m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1227\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1228\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   1094\u001b[0m             \u001b[0mfeed_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1095\u001b[0m         \u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_session\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1096\u001b[0;31m         \u001b[0mupdated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdates_op\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1097\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mupdated\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1098\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    715\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    716\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 717\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    718\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    719\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    913\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    914\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 915\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    916\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    917\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    963\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    964\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m--> 965\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m    966\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    967\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m    970\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    971\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 972\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    973\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    974\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m    952\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m    953\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 954\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m    955\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    956\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
