--- a/model_bbox/Hybrid_rep.ipynb
+++ b/model_bbox/Hybrid_rep.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, random, glob, pickle, collections, math\n",
     "import numpy as np\n",
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +261,7 @@
        " 7: 18.908635794743429}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -286,8 +294,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 6s, sys: 804 ms, total: 1min 7s\n",
-      "Wall time: 1min 7s\n"
+      "CPU times: user 1min 8s, sys: 1.18 s, total: 1min 9s\n",
+      "Wall time: 1min 16s\n"
      ]
     }
    ],
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +392,7 @@
    "execution_count": 72,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -569,7 +577,17 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoint file ./resnet50_FT38_Hybrid_Rep/checkpoint/weights.018-0.5821.hdf5\n",
+      "Epoch 1/30\n",
+      "  256/15583 [..............................] - ETA: 774s - loss: 5.0556 - acc: 0.8203 "
+     ]
+    }
+   ],
    "source": [
     "#resume training\n",
     "\n",
