--- a/model_bbox/Classifier_rep.ipynb
+++ b/model_bbox/Classifier_rep.ipynb
@@ -322,17 +322,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mean = np.mean(train_datagen.mean, axis=(0,1))"
-   ]
-  },
-  {
    "cell_type": "raw",
    "metadata": {
     "collapsed": false
@@ -408,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -699,8 +688,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model from checkpoint file ./resnet50_FT38_Classifier_Rep/checkpoint/weights.012-0.0706.hdf5\n",
-      "Epoch 1/100\n"
+      "Loading model from checkpoint file ./resnet50_FT38_Classifier_Rep/checkpoint/weights.010-0.0533.hdf5\n",
+      "Epoch 1/100\n",
+      "  896/15583 [>.............................] - ETA: 572s - loss: 0.0597 - acc: 0.9888"
      ]
     }
    ],
@@ -718,11 +708,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoint file ./resnet50_FT38_Classifier_Rep/checkpoint/weights.010-0.0533.hdf5\n"
+     ]
+    }
+   ],
    "source": [
     "#test prepare\n",
     "\n",
@@ -730,7 +728,7 @@
     "# print('Loading model from weights.004-0.0565.hdf5')\n",
     "# test_model = load_model('./checkpoints/checkpoint2/weights.004-0.0565.hdf5')\n",
     "\n",
-    "def test_generator(df, datagen = None, batch_size = BATCHSIZE):\n",
+    "def test_generator(df, mean, datagen = None, batch_size = BATCHSIZE):\n",
     "    n = df.shape[0]\n",
     "    batch_index = 0\n",
     "    while 1:\n",
@@ -749,8 +747,9 @@
     "            bbox = [row['xmin'],row['ymin'],row['xmax'],row['ymax']]\n",
     "            cropped = load_img(TEST_DIR+image_file,bbox,target_size=(ROWS,COLS))\n",
     "            x = np.asarray(cropped, dtype=K.floatx())\n",
+    "            x /= 255.\n",
     "            if datagen is not None: x = datagen.random_transform(x)            \n",
-    "            x = preprocess_input(x, mean)\n",
+    "            x -= mean\n",
     "            batch_x[i] = x\n",
     "            i += 1\n",
     "        if batch_index%50 == 0: print('batch_index', batch_index)\n",
@@ -768,31 +767,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train_mean = train_datagen.mean\n",
+    "valid_mean = valid_datagen.mean\n",
+    "X_train_centered = X_train - train_mean\n",
+    "X_valid_centered = X_valid - valid_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "np.max(train_mean-valid_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3896/3896 [==============================] - 37s    \n",
+      "class\n",
+      "ALB      0.101227\n",
+      "BET      0.285945\n",
+      "DOL      0.045057\n",
+      "LAG      0.000174\n",
+      "NoF      0.048201\n",
+      "OTHER    0.424662\n",
+      "SHARK    0.001984\n",
+      "YFT      0.166705\n",
+      "Name: logloss, dtype: float64\n",
+      "0.0699864220637031\n",
+      "15583/15583 [==============================] - 151s   \n",
+      "class\n",
+      "ALB      0.036542\n",
+      "BET      0.002317\n",
+      "DOL      0.000801\n",
+      "LAG      0.000698\n",
+      "NoF      0.032621\n",
+      "OTHER    0.017632\n",
+      "SHARK    0.002064\n",
+      "YFT      0.004589\n",
+      "Name: logloss, dtype: float64\n",
+      "0.030560385465424476\n"
+     ]
+    }
+   ],
+   "source": [
     "#validation data fish logloss\n",
-    "\n",
-    "# valid_pred = test_model.predict(valid_x, batch_size=BATCHSIZE, verbose=1)\n",
-    "# valid_pred = test_model.predict_generator(test_generator(df=valid_df),\n",
+    " \n",
+    "valid_pred = test_model.predict(X_valid_centered, batch_size=BATCHSIZE, verbose=1)\n",
+    "# valid_pred = test_model.predict_generator(test_generator(df=valid_df, mean=valid_mean),\n",
     "#                                           val_samples=valid_df.shape[0], nb_worker=1, pickle_safe=False)\n",
     "valid_logloss_df = pd.DataFrame(columns=['logloss','class'])\n",
-    "for i in range(valid_y.shape[0]):\n",
-    "    index = np.argmax(valid_y[i,:])\n",
+    "for i in range(y_valid.shape[0]):\n",
+    "    index = np.argmax(y_valid[i,:])\n",
     "    fish = FISH_CLASSES[index]\n",
     "    logloss = -math.log(valid_pred[i,index])\n",
     "    valid_logloss_df.loc[len(valid_logloss_df)]=[logloss,fish]                                       \n",
     "print(valid_logloss_df.groupby(['class'])['logloss'].mean())\n",
     "print(valid_logloss_df['logloss'].mean())\n",
     "\n",
-    "train_pred = test_model.predict_generator(test_generator(df=train_df),\n",
-    "                                          val_samples=train_df.shape[0], nb_worker=1, pickle_safe=False)\n",
+    "train_pred = test_model.predict(X_train_centered, batch_size=BATCHSIZE, verbose=1)\n",
+    "# train_pred = test_model.predict_generator(test_generator(df=train_df, ),\n",
+    "#                                           val_samples=train_df.shape[0], nb_worker=1, pickle_safe=False)\n",
     "train_logloss_df = pd.DataFrame(columns=['logloss','class'])\n",
-    "for i in range(train_y.shape[0]):\n",
-    "    index = np.argmax(train_y[i,:])\n",
+    "for i in range(y_train.shape[0]):\n",
+    "    index = np.argmax(y_train[i,:])\n",
     "    fish = FISH_CLASSES[index]\n",
     "    logloss = -math.log(train_pred[i,index])\n",
     "    train_logloss_df.loc[len(train_logloss_df)]=[logloss,fish]                                       \n",
@@ -841,11 +897,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating file RFCNbbox_RFCNpred_df_conf0.80.pickle\n",
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n"
+     ]
+    }
+   ],
    "source": [
     "# RFCNbbox_RFCNpred_df = ['image_class','image_file','crop_index','xmin','ymin','xmax','ymax',\n",
     "#                          'NoF_RFCN', 'ALB_RFCN', 'BET_RFCN', 'DOL_RFCN',\n",
@@ -899,18 +968,10 @@
     "            ymin = bbox[1]\n",
     "            xmax = bbox[2]\n",
     "            ymax = bbox[3]\n",
-    "            width = xmax-xmin\n",
-    "            height = ymax-ymin\n",
-    "            delta_width = p/(COLS-2*p)*width\n",
-    "            delta_height = p/(ROWS-2*p)*height\n",
-    "            xmin_expand = xmin-delta_width\n",
-    "            ymin_expand = ymin-delta_height\n",
-    "            xmax_expand = xmax+delta_width\n",
-    "            ymax_expand = ymax+delta_height\n",
-    "            assert max(xmin_expand,0)<min(xmax_expand,width_image)\n",
-    "            assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
-    "            RFCNbbox_RFCNpred_df.loc[len(RFCNbbox_RFCNpred_df)]=[image_class,basename+'.jpg',j,max(xmin_expand,0),max(ymin_expand,0),\n",
-    "                                                                   min(xmax_expand,width_image),min(ymax_expand,height_image),\n",
+    "            assert max(xmin,0)<min(xmax,width_image)\n",
+    "            assert max(ymin,0)<min(ymax,height_image)\n",
+    "            RFCNbbox_RFCNpred_df.loc[len(RFCNbbox_RFCNpred_df)]=[image_class,basename+'.jpg',j,max(xmin,0),max(ymin,0),\n",
+    "                                                                   min(xmax,width_image),min(ymax,height_image),\n",
     "                                                                   bbox[4],bbox[5],bbox[6],bbox[7],bbox[8],bbox[9],bbox[10],bbox[11]]   \n",
     "    \n",
     "    RFCNbbox_RFCNpred_df.to_pickle(OUTPUT_DIR+file_name)      "
@@ -918,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -927,7 +988,7 @@
     "# RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df = ['image_class', 'image_file','crop_index','xmin','ymin','xmax','ymax',\n",
     "#                                    'NoF_RFCN', 'ALB_RFCN', 'BET_RFCN', 'DOL_RFCN',\n",
     "#                                    'LAG_RFCN', 'OTHER_RFCN', 'SHARK_RFCN', 'YFT_RFCN',\n",
-    "#                                    'ALB_CROP', 'BET_CROP', 'DOL_CROP',\n",
+    "#                                    'NoF_CROP', 'ALB_CROP', 'BET_CROP', 'DOL_CROP',\n",
     "#                                    'LAG_CROP', 'OTHER_CROP', 'SHARK_CROP', 'YFT_CROP',\n",
     "#                                    'NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
@@ -936,39 +997,49 @@
     "    print ('Loading from file '+file_name)\n",
     "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df = pd.read_pickle(OUTPUT_DIR+file_name)\n",
     "else:\n",
-    "    print ('Generating file '+file_name)  \n",
-    "    nb_augmentation = 5\n",
-    "    if nb_augmentation ==1:\n",
-    "        test_preds = test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df), \n",
-    "                                                  val_samples=RFCNbbox_RFCNpred_df.shape[0], nb_worker=1, pickle_safe=False)\n",
-    "    else:\n",
-    "        test_preds = np.zeros((RFCNbbox_RFCNpred_df.shape[0], len(CROP_CLASSES)), dtype=K.floatx())\n",
-    "        for idx in range(nb_augmentation):\n",
-    "            print('{}th augmentation for testing ...'.format(idx+1))\n",
-    "            test_preds += test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df,datagen=test_aug_datagen), \n",
-    "                                                       val_samples=RFCNbbox_RFCNpred_df.shape[0], nb_worker=1, pickle_safe=False)\n",
-    "        test_preds /= nb_augmentation\n",
+    "#     print ('Generating file '+file_name)  \n",
+    "#     nb_augmentation = 5\n",
+    "#     if nb_augmentation ==1:\n",
+    "#         test_preds = test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df, mean=train_mean), \n",
+    "#                                                   val_samples=RFCNbbox_RFCNpred_df.shape[0], nb_worker=1, pickle_safe=False)\n",
+    "#     else:\n",
+    "#         test_preds = np.zeros((RFCNbbox_RFCNpred_df.shape[0], len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "#         for idx in range(nb_augmentation):\n",
+    "#             print('{}th augmentation for testing ...'.format(idx+1))\n",
+    "#             test_preds += test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df, mean=train_mean, datagen=test_aug_datagen), \n",
+    "#                                                        val_samples=RFCNbbox_RFCNpred_df.shape[0], nb_worker=1, pickle_safe=False)\n",
+    "#         test_preds /= nb_augmentation\n",
     "\n",
-    "    columns = ['ALB_CROP', 'BET_CROP', 'DOL_CROP', 'LAG_CROP', 'OTHER_CROP', 'SHARK_CROP', 'YFT_CROP']\n",
+    "    columns = ['NoF_CROP', 'ALB_CROP', 'BET_CROP', 'DOL_CROP', 'LAG_CROP', 'OTHER_CROP', 'SHARK_CROP', 'YFT_CROP']\n",
     "    CROPpred_df = pd.DataFrame(test_preds, columns=columns)\n",
     "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df = pd.concat([RFCNbbox_RFCNpred_df,CROPpred_df], axis=1)\n",
     "    \n",
     "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['NoF'] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['NoF_RFCN']\n",
-    "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['FISH'] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: 1-row['NoF_RFCN'], axis=1)\n",
-    "    for fish in CROP_CLASSES:\n",
-    "        RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: row['FISH']*row[[fish+'_CROP']], axis=1)\n",
-    "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.drop('FISH', axis=1, inplace=True)\n",
+    "#     RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df['FISH'] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: 1-row['NoF_RFCN'], axis=1)\n",
+    "    for fish in ['ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']:\n",
+    "        RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.apply(lambda row: (1-row['NoF_RFCN'])*row[[fish+'_CROP']]/(1-row['NoF_CROP']), axis=1)\n",
+    "#     RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.drop('FISH', axis=1, inplace=True)\n",
+    "#     for fish in FISH_CLASSES:\n",
+    "#         RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish] = RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df[fish+'_CROP']\n",
     "\n",
     "    RFCNbbox_RFCNpred_CROPpred_HYBRIDpred_df.to_pickle(OUTPUT_DIR+file_name) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating file test_pred_df_Hybrid_weights.010-0.0533.hdf5_.pickle\n"
+     ]
+    }
+   ],
    "source": [
     "# clsMaxAve and hybrid RFCNpred&CROPpred such that RFCNpred for NoF and CROPpred for fish\n",
     "# test_pred_df = ['logloss','image_class','image_file','NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
@@ -1073,11 +1144,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image_class\n",
+      "--            NaN\n",
+      "ALB      0.054244\n",
+      "BET      0.153770\n",
+      "DOL      0.019470\n",
+      "LAG      0.018792\n",
+      "NoF      0.126442\n",
+      "OTHER    0.070789\n",
+      "SHARK    0.079015\n",
+      "YFT      0.071676\n",
+      "Name: logloss, dtype: float64\n",
+      "logloss of train is 0.07254829733068995\n"
+     ]
+    }
+   ],
    "source": [
     "#temperature\n",
     "T = 1\n",
@@ -1094,6 +1184,28 @@
     "print(test_pred_T_df.groupby(['image_class'])['logloss'].mean())\n",
     "train_logloss = test_pred_T_df['logloss'].mean()\n",
     "print('logloss of train is', train_logloss )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "image_class\n",
+    "--            NaN\n",
+    "ALB      0.067321\n",
+    "BET      0.157700\n",
+    "DOL      0.041409\n",
+    "LAG      0.018016\n",
+    "NoF      0.379171\n",
+    "OTHER    0.072446\n",
+    "SHARK    0.076702\n",
+    "YFT      0.078673\n",
+    "Name: logloss, dtype: float64\n",
+    "logloss of train is 0.11187135488154488"
    ]
   },
   {
